# ai-templates

./: .gitignore  AGENTS.md  CLAUDE.md  DELEGATE.md  Makefile  README.md  code-validation-blueprint-guide.md  justfile
.beads/: issues.jsonl
blueprints/cpp-cli-base/: README.md  copier.yml
blueprints/cpp-cli-base/template/: .clang-format  .clang-tidy  .gitignore.template  .semgrepignore.template  AGENTS.md.template  CMakeLists.txt.template  CMakePresets.json.template  README.md.template  justfile.template
blueprints/cpp-cli-base/template/src/: app.cpp.template  main.cpp.template
blueprints/cpp-cli-base/template/tests/: app_test.cpp.template
blueprints/elixir-otp-base/: README.md  copier.yml
blueprints/elixir-otp-base/template/: .credo.exs  .gitignore.template  AGENTS.md.template  README.md.template  justfile.template  mix.exs.template
blueprints/elixir-otp-base/template/config/: config.exs.template
blueprints/elixir-otp-base/template/lib/: {{app_name}}.ex.template
blueprints/elixir-otp-base/template/test/: {{app_name}}_test.exs.template
blueprints/go-cli-base/: README.md  copier.yml
blueprints/go-cli-base/template/: .gitignore.template  .golangci.yml  .pre-commit-config.yaml.template  .semgrepignore.template  AGENTS.md.template  README.md.template  arch-go.yml  go.mod.template  justfile.template
blueprints/java-cli-base/: README.md  copier.yml
blueprints/java-cli-base/template/: .gitignore.template  .pre-commit-config.yaml.template  .semgrepignore.template  AGENTS.md.template  README.md.template  build.gradle.kts.template  gradle.properties.template  justfile.template
blueprints/python-cli-base/: README.md  copier.yml
blueprints/python-cli-base/template/: .gitignore.template  AGENTS.md.template  README.md.template  justfile.template  pyproject.toml.template  pyrightconfig.json.template
blueprints/rust-cli-base/: README.md  copier.yml
blueprints/rust-cli-base/template/: .gitignore.template  .pre-commit-config.yaml.template  .semgrepignore.template  AGENTS.md.template  Cargo.toml.template  README.md.template  deny.toml  justfile.template  rustfmt.toml
config/semgrep/: no-or-true.yml
docs/: code-validation-blueprint-guide.md
docs/plans/: 2026-02-28-elixir-validation-gaps-design.md  2026-02-28-java-cli-template-design.md  2026-02-28-java-cli-template-plan.md
project-setup/: README.md  setup-project-python-claude.md  setup-project-python-claude.sh  setup-project-python.md  setup-project.sh  setup_aliases.sh
tests/: run-tests.sh  test-cpp-template.sh  test-elixir-template.sh  test-go-template.sh  test-java-template.sh  test-rust-template.sh  test-template.sh
tests/languages/: cpp.sh  java.sh
tests/lib/: helpers.sh  runner.sh
violations/cpp/sanitize-signed-overflow/: check
violations/cpp/style-c-style-cast/: check
violations/cpp/typecheck-null-dereference/: check
violations/go/arch-forbidden-dependency/: arch-go.yml  check
violations/go/deptry-untidy-mod/: check  go.mod
violations/java/audit-outdated-dependency/: build.gradle.kts  check
violations/java/lsp-raw-type-warning/: check
violations/java/security-predictable-random/: check
violations/java/spell-typo-in-comment/: check
violations/python/audit-vulnerable-dependency/: pyproject.toml
violations/python/no-mypy-ignore-missing-imports/: pyproject.toml
violations/rust/security-unsafe-in-crate/: Cargo.toml
(+91 files in other folders)
